<resources>
    <string name="app_name">Books Viewer</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="book_title">Book Title</string>
    <string name="book_authors">Book Authors</string>
    <string name="save">Save</string>
    <string name="logo_description">Library</string>
    <string name="history">History</string>
    <string name="book">book</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="authors">Authors</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="page_count">Page Count</string>
    <string name="preview_book">Preview Book</string>
    <string name="published_date">Published Date</string>
    <string name="book_image">Book Image\n</string>
    <string name="unsave">Unsave</string>
    <string name="dark_mode">Dark Mode\n</string>
    <string name="favorites">Favorites\n</string>
    <string name="no_data_image">No Data</string>
    <string name="no_data_available_at_the_moment">No data available at the moment!</string>
</resources>