<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8dp"
    app:cardCornerRadius="@dimen/dimen_8dp"
    app:cardElevation="@dimen/dimen_4dp"
    tools:context=".ui.views.home.BookAdapter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp">

        <ImageView
            android:id="@+id/book_thumbnail"
            android:layout_width="@dimen/dimen_120dp"
            android:layout_height="@dimen/dimen_160dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/book" />

        <TextView
            android:id="@+id/book_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/book_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_authors"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/book_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="2" />

        <ImageView
            android:id="@+id/heart_icon"
            android:layout_width="@dimen/dimen_28dp"
            android:layout_height="@dimen/dimen_28dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:contentDescription="@string/heart_icon"
            android:src="@drawable/ic_heart_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/book_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/book_authors"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
