<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />

        <!-- Dark/Day mode icon aligned to the right -->
        <ImageView
            android:id="@+id/dark_mode_icon"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:src="@drawable/ic_dark_mode"
            android:contentDescription="@string/dark_mode"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_16dp" />

        <ImageView
            android:id="@+id/light_mode_icon"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:src="@drawable/ic_light_mode"
            android:contentDescription="@string/dark_mode"
            android:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dimen_16dp" />

        <!-- Favourites list icon aligned to the right of the dark mode icon -->
        <ImageView
            android:id="@+id/favorites_icon"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:src="@drawable/ic_favorites"
            android:contentDescription="@string/favorites"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_16dp" />

    </RelativeLayout>

    <!-- Fragment container, below the top bar -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_60dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
